--- a/src/pages/game/question1/question1.scss
+++ b/src/pages/game/question1/question1.scss
@@ -1,9 +1,3 @@
-.ally {
-    height: 100px; 
-    width: 100px; 
-   border-radius: 50%;
-   box-shadow: 0 0 5px rgb(76, 127, 160);
-   display: inline-block;
-   margin-left: auto;
-   margin-right: auto;
-} 
+page-question1 {
+    
+}
