--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,19 @@
 page-home {
 
+.displayed {
+    background-color: transparent;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+.button {
+  background-color: #550A21;
+
+}
+
+button:hover {
+  background-color: #003c00; }
+
+
 }
