--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,6 +41,10 @@ $colors: (
   dark:       #222
 );
 
+$toolbar-md-title-text-color: #550A21;
+$toolbar-ios-title-text-color: #550A21;
+$toolbar-wp-title-text-color: #550A21;
+
 
 // App iOS Variables
 // --------------------------------------------------
